--- a/tools/test-basic.Rmd
+++ b/tools/test-basic.Rmd
@@ -14,3 +14,9 @@ Hello world!
 knitr::kable(head(iris))
 plot(cars)
 ```
+
+Also a math expression $\bar{X} = \sum_{i=1}^n X_n / n$.
+
+\begin{equation} 
+  f\left(k\right) = \binom{n}{k} p^k\left(1-p\right)^{n-k}
+\end{equation} 
