set a CRAN repo explicitly to make install.packages() work

--- a/tools/test-kableExtra.Rmd
+++ b/tools/test-kableExtra.Rmd
@@ -5,6 +5,7 @@ output: pdf_document
 
 ```{r}
 library(knitr)
+options(repos = c(CRAN = 'https://cran.rstudio.com'))
 xfun::pkg_attach2('kableExtra')
 kable(head(iris)) %>%
   kable_styling(latex_options = "striped")
