move test-packages out of the tests/ directory, so it is easier to install additional packages such as bookdown and kableExtra
this is because R CMD check ignores packages are not formally specified as hard or soft dependencies in the package DESCRIPTION, and I don't really need bookdown or kableExtra to be even soft dependencies of tinytex

--- a/tools/test-kableExtra.Rmd
+++ b/tools/test-kableExtra.Rmd
@@ -5,6 +5,7 @@ output: pdf_document
 
 ```{r}
 library(knitr)
+xfun::pkg_load2('kableExtra')
 library(kableExtra)
 kable(head(iris)) %>%
   kable_styling(latex_options = "striped")
