--- a/TUGboat/tinytex.Rmd
+++ b/TUGboat/tinytex.Rmd
@@ -120,7 +120,7 @@ The installation is done through
 ./install-tl -profile=tinytex.profile
 ```
 
-where `install-tl` is extracted from the Net installer (use `install-tl-windows.bat` on Windows). The full source of the installation scripts can be found on Github at https://github.com/yihui/tinytex/tree/main/tools. To install TinyTeX on *nix, run `install-unx.sh`; to install it on Windows, run `install-windows.bat`.
+where `install-tl` is extracted from the Net installer (use `install-tl-windows.bat` on Windows). The full source of the installation scripts can be found on Github at https://github.com/rstudio/tinytex/tree/main/tools. To install TinyTeX on *nix, run `install-unx.sh`; to install it on Windows, run `install-windows.bat`.
 
 I set the `portable` option to `1` above, which means the installation directory will be portable. You can move it anywhere in your system, as long as you know how to handle the `PATH` variable, or call the executables (e.g., `tlmgr` or `pdflatex`) with their full paths. By default, the installation scripts of TinyTeX will try to add TeX Live's bin path to the environment variable `PATH`, or create symlinks to a path that is in `PATH` (e.g., `/usr/local/bin` on macOS and `$HOME/bin` on Linux).
 
@@ -171,7 +171,7 @@ In the R package **tinytex**, I try to obtain the names of the missing files or 
 
 The thing that TeX Live experts may frown upon is that since I do not know all possible missing packages beforehand, I will just keep trying to compile the document, find the missing packages, and install them. In other words, I do not know if there is a missing package unless I actually compile the document and hit an error. If a document contains $n$ missing packages, it may be recompiled $n$ times.
 
-On the bright side, this only needs to be done at most once for a document, so even if it is slow for the first time, the compilation will be much faster next time because all necessary packages have been installed. The process is also automatic (by default), so all you need to do is wait for a short moment. This feature is turned on for R Markdown @R-rmarkdown users, which means if the user's LaTeX distribution is TinyTeX, they will almost never run into the issue of missing packages when compiling R Markdown to PDF, and the "easy-to-maintain" TinyTeX should not need maintenance at all. As a matter of fact, this article [was written in R Markdown](https://github.com/yihui/tinytex/blob/master/TUGboat/tinytex.Rmd), and the first time I compiled it, the `tugboat` package was automatically installed:
+On the bright side, this only needs to be done at most once for a document, so even if it is slow for the first time, the compilation will be much faster next time because all necessary packages have been installed. The process is also automatic (by default), so all you need to do is wait for a short moment. This feature is turned on for R Markdown @R-rmarkdown users, which means if the user's LaTeX distribution is TinyTeX, they will almost never run into the issue of missing packages when compiling R Markdown to PDF, and the "easy-to-maintain" TinyTeX should not need maintenance at all. As a matter of fact, this article [was written in R Markdown](https://github.com/rstudio/tinytex/blob/master/TUGboat/tinytex.Rmd), and the first time I compiled it, the `tugboat` package was automatically installed:
 
 ```
 tlmgr search --file --global /ltugboat.cls
@@ -184,7 +184,7 @@ done running mktexlsr.
 
 The other major thing **tinytex** does is to emulate `latexmk`, i.e., try to compile a LaTeX document till all cross-references are resolved. The reason to reinvent `latexmk` in an R package is that `latexmk` cannot install missing packages on-the-fly.
 
-To sum it up, if R users compile a LaTeX document via **tinytex**, usually they will not need to know how many times they need to recompile it, or run into errors due to missing packages. My implementation may be clumsy, but the reaction from users seems to be positive anyway: https://github.com/yihui/tinytex/issues/7. I hope this could give some inspiration to developers in other communities, and I will be even more excited if TeX Live adds the native (and professional) support someday, so I can drop my poor implementation.
+To sum it up, if R users compile a LaTeX document via **tinytex**, usually they will not need to know how many times they need to recompile it, or run into errors due to missing packages. My implementation may be clumsy, but the reaction from users seems to be positive anyway: https://github.com/rstudio/tinytex/issues/7. I hope this could give some inspiration to developers in other communities, and I will be even more excited if TeX Live adds the native (and professional) support someday, so I can drop my poor implementation.
 
 # Discussion
 
@@ -196,7 +196,7 @@ Thirdly, TinyTeX was created mainly for individual users who install TinyTeX for
 
 Lastly, TinyTeX is essentially a version of TeX Live installed through an installation script. I did not provide prebuilt binaries, even though it would be easy technically. I do not fully understand the TeX Live license and LaTeX package licenses, but I guess I would be very likely to violate these licenses if I provide binaries without also shipping the source files inside at the same time. Anyway, installing TinyTeX over the Internet usually takes only a minute or two, so this may not be a big concern.
 
-I hope you might find TinyTeX (and the R package **tinytex**, if you happen to be an R user, too) useful. If you have any feedback or questions or bug reports, please feel free to post them to the Github repository: https://github.com/yihui/tinytex.
+I hope you might find TinyTeX (and the R package **tinytex**, if you happen to be an R user, too) useful. If you have any feedback or questions or bug reports, please feel free to post them to the Github repository: https://github.com/rstudio/tinytex.
 
 ```{r, include=FALSE}
 knitr::write_bib(c('base', 'tinytex', 'rmarkdown'), 'tinytex.bib')
